@@ -1,5 +1,6 @@
 
 ##### Version 0.12.3
+* Add ... argument to ranger()
 * Bug fixes
 
 ##### Version 0.12.2
